--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ button{padding:8px 16px; border:0; border-radius:8px; font-weight:600; cursor:po
 button.main-menu {background:#333; color:#fff; border:2px solid #fff}
 button.primary{background:var(--accent);color:#fff}
 button.off{background:#999;color:#fff}
+button.warning{background:#f0ad4e;color:#fff}
 .block{margin:16px;padding:14px;background:var(--card);border-radius:14px;box-shadow:0 2px 8px rgba(0,0,0,.08);position:relative;transition:all 0.3s}
 .block h2{font-size:1.3rem;margin-bottom:10px;text-align:center}
 table{width:100%;border-collapse:collapse}
@@ -53,6 +54,7 @@ input[disabled]{background:#eee;color:#777}
     <button class="main-menu" onclick="toggleMenu()">☰ MENU</button>
     <div class="menu-items" id="menuItems">
         <button id="adminBtn" class="off">ADMIN OFF</button>
+        <button id="pullBtn" class="warning" style="display:none">TARIK SALDO LALU</button>
         <button id="themeBtn" class="primary">GANTI TEMA</button>
         <button id="cetakBtn" class="primary">CETAK LAPORAN</button>
     </div>
@@ -129,7 +131,7 @@ function buildTables(){
 function recalc(){
  let tM=0, tK=0, runM=0;
  document.querySelectorAll('#tbMasuk tr').forEach(tr=>{
-  let raw = tr.children[3].firstChild.value.toString().replace(/\D/g,'');
+  let raw = tr.children[3].firstChild.value.toString().replace(/[^0-9]/g,'');
   let u=parseInt(raw)||0;
   runM+=u; tM+=u;
   tr.children[3].firstChild.value=u.toLocaleString('id-ID');
@@ -144,8 +146,8 @@ function recalc(){
   }
  });
  document.querySelectorAll('#tbKeluar tr').forEach(tr=>{
-  let q=parseInt(tr.children[2].firstChild.value.toString().replace(/\D/g,''))||0;
-  let h=parseInt(tr.children[3].firstChild.value.toString().replace(/\D/g,''))||0;
+  let q=parseInt(tr.children[2].firstChild.value.toString().replace(/[^0-9]/g,''))||0;
+  let h=parseInt(tr.children[3].firstChild.value.toString().replace(/[^0-9]/g,''))||0;
   let t=q*h; tK+=t;
   tr.children[2].firstChild.value=q.toLocaleString('id-ID');
   tr.children[3].firstChild.value=h.toLocaleString('id-ID');
@@ -156,15 +158,15 @@ function recalc(){
  document.getElementById('saldoAkhir').textContent=(tM-tK).toLocaleString('id-ID');
 }
 
-// LOGIKA HITUNG ULANG SALDO DARI DATABASE
-function fetchPrevSaldo(){
+// FUNGSI MANUAL UNTUK TARIK SALDO
+function fetchPrevSaldoManual(){
  let pm=bulan-1, pt=tahun; if(pm<0){pm=11; pt--;}
  db.ref('kas_data/'+pm+'-'+pt).once('value', s=>{
   const d=s.val(); let sL=0;
   if(d){
    let mTotal=0, kTotal=0;
-   if(d.masuk) d.masuk.forEach(r=>mTotal+=parseInt(r.uang.replace(/\D/g,''))||0);
-   if(d.keluar) d.keluar.forEach(r=>kTotal+=(parseInt(r.qty.replace(/\D/g,''))||0)*(parseInt(r.harga.replace(/\D/g,''))||0));
+   if(d.masuk) d.masuk.forEach(r=>mTotal+=parseInt(r.uang.toString().replace(/[^0-9]/g,''))||0);
+   if(d.keluar) d.keluar.forEach(r=>kTotal+=(parseInt(r.qty.toString().replace(/[^0-9]/g,''))||0)*(parseInt(r.harga.toString().replace(/[^0-9]/g,''))||0));
    sL=mTotal-kTotal;
   }
   const trSisa=document.querySelector('#tbMasuk tr');
@@ -173,7 +175,8 @@ function fetchPrevSaldo(){
     trSisa.children[0].firstChild.value=`${tahun}-${fM}-01`;
     trSisa.children[3].firstChild.value=sL.toLocaleString('id-ID');
     recalc(); 
-    if(isAdmin) { setTimeout(saveData, 1000); }
+    alert("Saldo berhasil ditarik: Rp " + sL.toLocaleString('id-ID'));
+    if(isAdmin) saveData();
   }
  });
 }
@@ -182,16 +185,7 @@ function loadData(){
  buildTables();
  db.ref('kas_data/'+bulan+'-'+tahun).once('value', s=>{
   const d=s.val();
-  // Cek apakah data bulan ini benar-benar ada isinya
-  let hasData = false;
-  if(d && d.masuk){
-    // Cek jika baris pertama (SISA KAS) sudah ada isinya atau baris lain
-    const isSisaFilled = d.masuk[0] && (parseInt(d.masuk[0].uang.replace(/\D/g,'')) > 0);
-    const isOtherFilled = d.masuk.slice(1).some(r => parseInt(r.uang.replace(/\D/g,'')) > 0);
-    if(isSisaFilled || isOtherFilled) hasData = true;
-  }
-
-  if(hasData){
+  if(d){
    if(d.masuk) d.masuk.forEach((r,i)=>{
     const tr=document.querySelectorAll('#tbMasuk tr')[i];
     if(tr){ tr.children[0].firstChild.value=r.tanggal||''; tr.children[1].firstChild.value=r.nama||namaAnggota[i]; tr.children[2].firstChild.value=r.ket||''; tr.children[3].firstChild.value=r.uang||'0'; }
@@ -200,12 +194,11 @@ function loadData(){
     const tr=document.querySelectorAll('#tbKeluar tr')[i];
     if(tr){ tr.children[0].firstChild.value=r.tanggal||''; tr.children[1].firstChild.value=r.ket||''; tr.children[2].firstChild.value=r.qty||'0'; tr.children[3].firstChild.value=r.harga||'0'; }
    });
-   recalc();
   } else {
-   // Jika data murni kosong, tarik sisa saldo bulan lalu
-   if(!(bulan===0 && tahun===2026)) fetchPrevSaldo();
-   recalc();
+   // Otomatis tarik jika benar-benar kosong
+   if(!(bulan===0 && tahun===2026)) fetchPrevSaldoManual();
   }
+  recalc();
   applyAdminLock();
  });
 }
@@ -222,14 +215,21 @@ document.getElementById('adminBtn').onclick=()=>{
   const u=prompt('USER'), p=prompt('PASS');
   if(u==='ADMIN'&&p==='SANUMION'){
    isAdmin=true; adminBtn.textContent='ADMIN ON'; adminBtn.className='primary';
+   document.getElementById('pullBtn').style.display = 'block';
    autoSaveTimer=setInterval(saveData, 2500);
   }
  }else{
   isAdmin=false; adminBtn.textContent='ADMIN OFF'; adminBtn.className='off';
+  document.getElementById('pullBtn').style.display = 'none';
   clearInterval(autoSaveTimer);
  }
  applyAdminLock(); toggleMenu(); recalc();
 };
+
+document.getElementById('pullBtn').onclick=()=>{
+ fetchPrevSaldoManual();
+ toggleMenu();
+}
 
 function lockUI(l){ document.querySelectorAll('.editable').forEach(i=>i.disabled=l); }
 function applyAdminLock(){ lockUI(!isAdmin); }
