--- a/index.html
+++ b/index.html
@@ -11,21 +11,20 @@
 body{font-family:var(--font);background:var(--bg);margin:0;padding:20px;text-transform:uppercase;color:var(--text)}
 header{text-align:center;font-size:2rem;margin-bottom:10px}
 .menu-container {position:fixed; top:12px; right:12px; z-index:1000; display:flex; flex-direction:column; align-items:flex-end; gap:8px}
-.menu-items {display:none; flex-direction:column; gap:8px; background:rgba(0,0,0,0.8); padding:10px; border-radius:8px}
+.menu-items {display:none; flex-direction:column; gap:8px; background:rgba(0,0,0,0.9); padding:12px; border-radius:8px; box-shadow:0 4px 20px rgba(0,0,0,0.4)}
 .menu-items.show {display:flex}
-button{padding:8px 16px; border:0; border-radius:8px; font-weight:600; cursor:pointer; text-transform:uppercase}
+button{padding:10px 16px; border:0; border-radius:8px; font-weight:600; cursor:pointer; text-transform:uppercase}
 button.main-menu {background:#333; color:#fff; border:2px solid #fff}
 button.primary{background:var(--accent);color:#fff}
 button.off{background:#999;color:#fff}
-button.warning{background:#f0ad4e;color:#fff}
+button.warning{background:#f0ad4e;color:#fff;border:1px solid #fff}
 .block{margin:16px;padding:14px;background:var(--card);border-radius:14px;box-shadow:0 2px 8px rgba(0,0,0,.08);position:relative;transition:all 0.3s}
 .block h2{font-size:1.3rem;margin-bottom:10px;text-align:center}
 table{width:100%;border-collapse:collapse}
 th,td{border:1px solid var(--border);padding:6px;text-align:left}
 th{text-align:center; background:#eee; color:#000}
 input{padding:4px;border-radius:6px;border:1px solid #ccc;width:100%;box-sizing:border-box;text-transform:none;font-family:inherit}
-input[disabled]{background:#eee;color:#777}
-/* Efek Cyberpunk LED */
+input[disabled]{background:#f9f9f9;color:#555;border:1px solid #ddd}
 .theme-cyberpunk{--bg:#0a0a0a;--card:#1a001a;--text:#ff00ff;--border:#00ffcc;--accent:#ffff00;--yellow:#ffff00;}
 .cyber-effect{animation:ledRotate 3s linear infinite}
 @keyframes ledRotate{
@@ -36,7 +35,7 @@ input[disabled]{background:#eee;color:#777}
 .theme-dark{--bg:#1e1e1e;--text:#eee;--card:#2a2a2a;--border:#444}
 .theme-blue{--bg:#eef4ff;--text:#102040;--card:#fff}
 .grand-total-table{width:100%;border-collapse:collapse;margin-top:10px}
-.grand-total-table th, .grand-total-table td{border:1px solid var(--border);padding:6px;text-align:center;font-weight:700}
+.grand-total-table th, .grand-total-table td{border:1px solid var(--border);padding:8px;text-align:center;font-weight:700}
 .grand-total-table td.saldo-akhir{background:var(--yellow);color:#000}
 </style>
 </head>
@@ -45,7 +44,7 @@ input[disabled]{background:#eee;color:#777}
   LAPORAN KAS GANG MAWAR 3
   <div style="margin-top:10px; text-align:center">
     <button onclick="prevMonth()">◀</button>
-    <span id="periode">JANUARI 2026</span>
+    <span id="periode" style="min-width:180px; display:inline-block">JANUARI 2026</span>
     <button onclick="nextMonth()">▶</button>
   </div>
 </header>
@@ -103,12 +102,9 @@ const firebaseConfig = {
 firebase.initializeApp(firebaseConfig);
 const db = firebase.database();
 
-let isAdmin=false;
-let autoSaveTimer=null;
-let bulan=0,tahun=2026;
+let isAdmin=false, autoSaveTimer=null, bulan=0, tahun=2026, currentTheme='';
 const namaBulan=['JANUARI','FEBRUARI','MARET','APRIL','MEI','JUNI','JULI','AGUSTUS','SEPTEMBER','OKTOBER','NOVEMBER','DESEMBER'];
 const namaAnggota=['SISA KAS SEBELUMNYA','RIZAL','ROMI','TRI','ANIS','FAJAR DJAKA','FAJAR SHANUM','AGUS','LUKMAN','IRAWAN','RIAN','MULYADIE','HELDI','HILMAN','NANO','TEGUH'];
-let currentTheme='';
 
 function toggleMenu() { document.getElementById('menuItems').classList.toggle('show'); }
 
@@ -136,7 +132,6 @@ function recalc(){
   runM+=u; tM+=u;
   tr.children[3].firstChild.value=u.toLocaleString('id-ID');
   tr.children[4].textContent=runM.toLocaleString('id-ID');
-  
   const ketVal=tr.children[2].firstChild.value.toUpperCase();
   const inputs=tr.querySelectorAll('input');
   if(ketVal.includes('BELUM BAYAR')){
@@ -158,14 +153,13 @@ function recalc(){
  document.getElementById('saldoAkhir').textContent=(tM-tK).toLocaleString('id-ID');
 }
 
-// FUNGSI MANUAL UNTUK TARIK SALDO
 function fetchPrevSaldoManual(){
  let pm=bulan-1, pt=tahun; if(pm<0){pm=11; pt--;}
  db.ref('kas_data/'+pm+'-'+pt).once('value', s=>{
   const d=s.val(); let sL=0;
-  if(d){
+  if(d && d.masuk){
    let mTotal=0, kTotal=0;
-   if(d.masuk) d.masuk.forEach(r=>mTotal+=parseInt(r.uang.toString().replace(/[^0-9]/g,''))||0);
+   d.masuk.forEach(r=>mTotal+=parseInt(r.uang.toString().replace(/[^0-9]/g,''))||0);
    if(d.keluar) d.keluar.forEach(r=>kTotal+=(parseInt(r.qty.toString().replace(/[^0-9]/g,''))||0)*(parseInt(r.harga.toString().replace(/[^0-9]/g,''))||0));
    sL=mTotal-kTotal;
   }
@@ -173,9 +167,11 @@ function fetchPrevSaldoManual(){
   if(trSisa){
     const fM=(bulan+1).toString().padStart(2,'0');
     trSisa.children[0].firstChild.value=`${tahun}-${fM}-01`;
+    // OTOMATIS ISI KETERANGAN
+    trSisa.children[2].firstChild.value=`SISA KAS ${namaBulan[pm]} ${pt}`;
     trSisa.children[3].firstChild.value=sL.toLocaleString('id-ID');
     recalc(); 
-    alert("Saldo berhasil ditarik: Rp " + sL.toLocaleString('id-ID'));
+    alert("Berhasil menarik saldo " + namaBulan[pm] + ": Rp " + sL.toLocaleString('id-ID'));
     if(isAdmin) saveData();
   }
  });
@@ -194,12 +190,8 @@ function loadData(){
     const tr=document.querySelectorAll('#tbKeluar tr')[i];
     if(tr){ tr.children[0].firstChild.value=r.tanggal||''; tr.children[1].firstChild.value=r.ket||''; tr.children[2].firstChild.value=r.qty||'0'; tr.children[3].firstChild.value=r.harga||'0'; }
    });
-  } else {
-   // Otomatis tarik jika benar-benar kosong
-   if(!(bulan===0 && tahun===2026)) fetchPrevSaldoManual();
   }
-  recalc();
-  applyAdminLock();
+  recalc(); applyAdminLock();
  });
 }
 
@@ -215,21 +207,18 @@ document.getElementById('adminBtn').onclick=()=>{
   const u=prompt('USER'), p=prompt('PASS');
   if(u==='ADMIN'&&p==='SANUMION'){
    isAdmin=true; adminBtn.textContent='ADMIN ON'; adminBtn.className='primary';
-   document.getElementById('pullBtn').style.display = 'block';
+   document.getElementById('pullBtn').style.display='block';
    autoSaveTimer=setInterval(saveData, 2500);
   }
  }else{
   isAdmin=false; adminBtn.textContent='ADMIN OFF'; adminBtn.className='off';
-  document.getElementById('pullBtn').style.display = 'none';
+  document.getElementById('pullBtn').style.display='none';
   clearInterval(autoSaveTimer);
  }
  applyAdminLock(); toggleMenu(); recalc();
 };
 
-document.getElementById('pullBtn').onclick=()=>{
- fetchPrevSaldoManual();
- toggleMenu();
-}
+document.getElementById('pullBtn').onclick=()=>{ fetchPrevSaldoManual(); toggleMenu(); }
 
 function lockUI(l){ document.querySelectorAll('.editable').forEach(i=>i.disabled=l); }
 function applyAdminLock(){ lockUI(!isAdmin); }
