--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>LAPORAN KAS GANG MAWAR 3</title>
 <style>
 :root{
- --bg:#f5f5f5;--card:#ffffff;--text:#000000;--border:#cccccc;--accent:#4caf50;--danger:#d9534f;--yellow:#fff200;--font:Arial,sans-serif;
+ --bg:#f5f5f5;--card:#ffffff;--text:#000000;--border:#cccccc;--accent:#4caf50;--danger:#d9534f;--success:#28a745;--yellow:#fff200;--font:Arial,sans-serif;
 }
 body{font-family:var(--font);background:var(--bg);margin:0;padding:20px;text-transform:uppercase;color:var(--text)}
 header{text-align:center;font-size:2rem;margin-bottom:10px}
@@ -132,11 +132,16 @@ function recalc(){
   runM+=u; tM+=u;
   tr.children[3].firstChild.value=u.toLocaleString('id-ID');
   tr.children[4].textContent=runM.toLocaleString('id-ID');
+  
   const ketVal=tr.children[2].firstChild.value.toUpperCase();
   const inputs=tr.querySelectorAll('input');
+  
+  // LOGIKA WARNA BARIS
   if(ketVal.includes('BELUM BAYAR')){
    inputs.forEach(inp=>{inp.style.backgroundColor='var(--danger)'; inp.style.color='#fff';});
-  }else{
+  } else if(ketVal.includes('LUNAS') || ketVal.includes('SUDAH BAYAR') || ketVal.includes('SISA KAS')){
+   inputs.forEach(inp=>{inp.style.backgroundColor='var(--success)'; inp.style.color='#fff';});
+  } else {
    inputs.forEach(inp=>{inp.style.backgroundColor=''; inp.style.color='';});
   }
  });
@@ -167,7 +172,6 @@ function fetchPrevSaldoManual(){
   if(trSisa){
     const fM=(bulan+1).toString().padStart(2,'0');
     trSisa.children[0].firstChild.value=`${tahun}-${fM}-01`;
-    // OTOMATIS ISI KETERANGAN
     trSisa.children[2].firstChild.value=`SISA KAS ${namaBulan[pm]} ${pt}`;
     trSisa.children[3].firstChild.value=sL.toLocaleString('id-ID');
     recalc(); 
