--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ input[disabled]{background:#f9f9f9;color:#555;border:1px solid #ddd}
   LAPORAN KAS GANG MAWAR 3
   <div style="margin-top:10px; text-align:center">
     <button onclick="prevMonth()">◀</button>
-    <span id="periode" style="min-width:180px; display:inline-block">JANUARI 2026</span>
+    <span id="periode" style="min-width:180px; display:inline-block">...</span>
     <button onclick="nextMonth()">▶</button>
   </div>
 </header>
@@ -102,7 +102,12 @@ const firebaseConfig = {
 firebase.initializeApp(firebaseConfig);
 const db = firebase.database();
 
-let isAdmin=false, autoSaveTimer=null, bulan=0, tahun=2026, currentTheme='';
+// DETEKSI BULAN & TAHUN SAAT INI
+const skrg = new Date();
+let bulan = skrg.getMonth(); 
+let tahun = skrg.getFullYear();
+
+let isAdmin=false, autoSaveTimer=null, currentTheme='';
 const namaBulan=['JANUARI','FEBRUARI','MARET','APRIL','MEI','JUNI','JULI','AGUSTUS','SEPTEMBER','OKTOBER','NOVEMBER','DESEMBER'];
 const namaAnggota=['SISA KAS SEBELUMNYA','RIZAL','ROMI','TRI','ANIS','FAJAR DJAKA','FAJAR SHANUM','AGUS','LUKMAN','IRAWAN','RIAN','MULYADIE','HELDI','HILMAN','NANO','TEGUH'];
 
@@ -136,7 +141,6 @@ function recalc(){
   const ketVal=tr.children[2].firstChild.value.toUpperCase();
   const inputs=tr.querySelectorAll('input');
   
-  // LOGIKA WARNA BARIS
   if(ketVal.includes('BELUM BAYAR')){
    inputs.forEach(inp=>{inp.style.backgroundColor='var(--danger)'; inp.style.color='#fff';});
   } else if(ketVal.includes('LUNAS') || ketVal.includes('SUDAH BAYAR') || ketVal.includes('SISA KAS')){
@@ -223,7 +227,6 @@ document.getElementById('adminBtn').onclick=()=>{
 };
 
 document.getElementById('pullBtn').onclick=()=>{ fetchPrevSaldoManual(); toggleMenu(); }
-
 function lockUI(l){ document.querySelectorAll('.editable').forEach(i=>i.disabled=l); }
 function applyAdminLock(){ lockUI(!isAdmin); }
 function prevMonth(){ bulan--; if(bulan<0){bulan=11; tahun--;} updateUI(); }
@@ -248,7 +251,7 @@ document.getElementById('cetakBtn').onclick=()=>{
 };
 
 document.addEventListener('input', recalc);
-loadData();
+updateUI(); // Inisialisasi tampilan pertama kali
 </script>
 </body>
 </html>
