--- a/index.html
+++ b/index.html
@@ -10,39 +10,29 @@
 }
 body{font-family:var(--font);background:var(--bg);margin:0;padding:20px;text-transform:uppercase;color:var(--text)}
 header{text-align:center;font-size:2rem;margin-bottom:5px}
-
-/* Info Update di Bawah Periode */
 .update-info {text-align:center; font-size:0.85rem; color:#666; margin-bottom:15px; font-weight:normal; text-transform:none;}
-
 .menu-container {position:fixed; top:12px; right:12px; z-index:1000; display:flex; flex-direction:column; align-items:flex-end; gap:8px}
 .menu-items {display:none; flex-direction:column; gap:8px; background:rgba(0,0,0,0.9); padding:12px; border-radius:8px; box-shadow:0 4px 20px rgba(0,0,0,0.4)}
 .menu-items.show {display:flex}
-
 button{padding:10px 16px; border:0; border-radius:8px; font-weight:600; cursor:pointer; text-transform:uppercase}
 button.main-menu {background:#333; color:#fff; border:2px solid #fff}
 button.primary{background:var(--accent);color:#fff}
 button.off{background:#999;color:#fff}
 button.warning{background:#f0ad4e;color:#fff;border:1px solid #fff}
-
 .block{margin:16px;padding:14px;background:var(--card);border-radius:14px;box-shadow:0 2px 8px rgba(0,0,0,.08);position:relative;transition:all 0.3s}
 .block h2{font-size:1.3rem;margin-bottom:10px;text-align:center}
-
-/* Kotak Catatan Sesuai Tema */
 .note-box {border:2px dashed var(--border); padding:15px; background:rgba(0,0,0,0.03); border-radius:12px; margin-top:20px}
 .note-box textarea {width:100%; background:transparent; border:0; color:var(--text); font-family:inherit; font-size:1rem; resize:none; text-transform:none}
-
 table{width:100%;border-collapse:collapse}
 th,td{border:1px solid var(--border);padding:6px;text-align:left}
 th{text-align:center; background:#eee; color:#000}
 input{padding:4px;border-radius:6px;border:1px solid #ccc;width:100%;box-sizing:border-box;text-transform:none;font-family:inherit}
 input[disabled]{background:#f9f9f9;color:#555;border:1px solid #ddd}
-
 .theme-cyberpunk{--bg:#0a0a0a;--card:#1a001a;--text:#ff00ff;--border:#00ffcc;--accent:#ffff00;--yellow:#ffff00;}
 .theme-cyberpunk .update-info {color:#00ffcc}
 .theme-dark{--bg:#1e1e1e;--text:#eee;--card:#2a2a2a;--border:#444}
 .theme-dark .update-info {color:#aaa}
 .theme-blue{--bg:#eef4ff;--text:#102040;--card:#fff}
-
 .grand-total-table{width:100%;border-collapse:collapse;margin-top:10px}
 .grand-total-table th, .grand-total-table td{border:1px solid var(--border);padding:8px;text-align:center;font-weight:700}
 .grand-total-table td.saldo-akhir{background:var(--yellow);color:#000}
@@ -194,29 +184,38 @@ function saveData(){
  if(!isAdmin) return;
  const tgl = new Date();
  const formatUpdate = tgl.getDate() + " " + namaBulan[tgl.getMonth()] + " " + tgl.getFullYear() + ", PUKUL " + tgl.getHours().toString().padStart(2,'0') + ":" + tgl.getMinutes().toString().padStart(2,'0') + " WIB";
- 
  const m=[...document.querySelectorAll('#tbMasuk tr')].map(tr=>({tanggal:tr.children[0].firstChild.value, nama:tr.children[1].firstChild.value, ket:tr.children[2].firstChild.value, uang:tr.children[3].firstChild.value}));
  const k=[...document.querySelectorAll('#tbKeluar tr')].map(tr=>({tanggal:tr.children[0].firstChild.value, ket:tr.children[1].firstChild.value, qty:tr.children[2].firstChild.value, harga:tr.children[3].firstChild.value}));
  const cat = document.getElementById('catatanWarga').value;
-
  db.ref('kas_data/'+bulan+'-'+tahun).update({masuk:m, keluar:k, catatan:cat, updated:formatUpdate});
  document.getElementById('lastUpdate').textContent = "TERAKHIR DI UPDATE PADA: " + formatUpdate;
 }
 
-document.getElementById('adminBtn').onclick=()=>{
+document.getElementById('adminBtn').onclick = function() {
  if(!isAdmin){
-  const u=prompt('USER'), p=prompt('PASS');
-  if(u === 'ADMIN' && p === 'SANUMION'){
-   isAdmin=true; adminBtn.textContent='ADMIN ON'; adminBtn.className='primary';
+  let u=prompt('USER'), p=prompt('PASS');
+  if(!u || !p) return;
+  if(u.toUpperCase() === 'ADMIN' && p.toUpperCase() === 'SANUMION'){
+   isAdmin=true; 
+   this.textContent='ADMIN ON'; 
+   this.className='primary';
    document.getElementById('pullBtn').style.display='block';
    autoSaveTimer=setInterval(saveData, 3000);
+   applyAdminLock();
+   recalc();
+   alert('LOGIN BERHASIL!');
+  } else {
+   alert('USER/PASS SALAH!');
   }
- }else{
-  isAdmin=false; adminBtn.textContent='ADMIN OFF'; adminBtn.className='off';
+ } else {
+  isAdmin=false; 
+  this.textContent='ADMIN OFF'; 
+  this.className='off';
   document.getElementById('pullBtn').style.display='none';
   clearInterval(autoSaveTimer);
+  applyAdminLock();
  }
- applyAdminLock(); toggleMenu(); recalc();
+ toggleMenu();
 };
 
 document.getElementById('pullBtn').onclick=()=>{
@@ -234,7 +233,7 @@ document.getElementById('pullBtn').onclick=()=>{
     trSisa.children[0].firstChild.value=`${tahun}-${(bulan+1).toString().padStart(2,'0')}-01`;
     trSisa.children[2].firstChild.value=`SISA KAS ${namaBulan[pm]} ${pt}`;
     trSisa.children[3].firstChild.value=sL.toLocaleString('id-ID');
-    recalc(); saveData(); alert("Saldo Ditarik!");
+    recalc(); saveData(); alert("Saldo Berhasil Ditarik!");
   }
  });
  toggleMenu();
@@ -267,4 +266,3 @@ updateUI();
 </script>
 </body>
 </html>
-
