--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ input[disabled]{background:#f9f9f9;color:#555;border:1px solid #ddd}
 </div>
 
 <div class="block note-box" id="boxNote">
-  <h2 style="text-align:left; font-size:0.85rem; border-bottom:1px solid var(--border); padding-bottom:10px">📌 CATATAN PENTING & PENGUMUMAN</h2>
+  <h2 style="text-align:left; font-size:0.85rem; border-bottom:1px solid var(--border); padding-bottom:10px">📌 CATATAN PENTING</h2>
   <textarea id="catatanWarga" class="editable" placeholder="Klik Admin ON untuk mengisi catatan di sini..." rows="8"></textarea>
 </div>
 
@@ -286,3 +286,4 @@ updateUI();
 </script>
 </body>
 </html>
+
